# minesweeper-cpp-semestral-project

./: CMakeLists.txt  README.md  README.txt  cppterminaltest.cpp  main.cpp  test1.cpp
Game/: CmakeProjekt.cpp  main.cpp  testFile.cpp
Game/Model/: Board.cpp  Board.h  GameManager.cpp  GameManager.h  InputHandler.cpp  InputHandler.h  Menu.cpp  Menu.h  board.cpp  board.h
Game/Threads/: computeThread.cpp  computeThread.h  inputThread.cpp  inputThread.h  outputThread.cpp  outputThread.h
linux_build/: CMakeCache.txt  Makefile  cmake_install.cmake  minesweeper  minesweeperTests
tests/: test1.cpp
